--- a/assets/css/3-sections/_-sections-dir.sass
+++ b/assets/css/3-sections/_-sections-dir.sass
@@ -2,7 +2,7 @@
 @import 'footer'
 @import 'about'
 @import 'work'
-@import 'testimonials'
+@import 'clients'
 @import 'contact'
 @import 'form'
 @import 'form-success'
