--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,6 +1,6 @@
 <section class="section-clients">
 
-  <h3 id="clients">Testimonials</h3>
+  <h3 id="testimonials">Testimonials</h3>
 
   <div class="clients-mobile-nav">
     {% for client in site.data.settings.clients %}
