--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -21,13 +21,13 @@
     path
       fill: $accent
     
-    &.icon-pencil
-      +order(1)
-    &.icon-mouse
+    &.icon-terminal
       +order(2)
-    &.icon-browser
+    &.icon-immerse
+      +order(1)
+    &.icon-mixer
       +order(4)
-    &.icon-video
+    &.icon-sound
       +order(5)
 
 @media screen and (max-width: 650px)
