--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,10 +6,10 @@
     
     <div class="face-img"></div>
     
-    <div class="icon-pencil">{% include icons/icon-pencil.html %}</div>
-    <div class="icon-mouse">{% include icons/icon-mouse.html %}</div>
-    <div class="icon-browser">{% include icons/icon-browser.html %}</div>
-    <div class="icon-video">{% include icons/icon-video.html %}</div>
+    <div class="icon-terminal">{% include icons/icon-terminal.html %}</div>
+    <div class="icon-immerse">{% include icons/icon-immerse.html %}</div>
+    <div class="icon-mixer">{% include icons/icon-mixer.html %}</div>
+    <div class="icon-sound">{% include icons/icon-sound.html %}</div>
     
   </div>
   
