replace imersion with teamwork icon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     
     <div class="face-img"></div>
     
-    <div class="icon-immerse">{% include icons/icon-immerse.html %}</div>
+    <div class="icon-teamwork">{% include icons/icon-teamwork.html %}</div>
     <div class="icon-terminal">{% include icons/icon-terminal.html %}</div>
     <div class="icon-mixer">{% include icons/icon-mixer.html %}</div>
     <div class="icon-sound">{% include icons/icon-sound.html %}</div>
