--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -21,7 +21,7 @@
     path
       fill: $accent
     
-    &.icon-immerse
+    &.icon-teamwork
       +order(1)
     &.icon-terminal
       +order(2)
