formspree landing page link repair and work back button colour, removed the_design.psd and ref to it.

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -4,6 +4,8 @@
   
 <form method="POST" action="//formspree.io/{{ site.data.settings.email }}">
   
+  <input type="hidden" name="_next" value="form-success/index.html" />
+  
   <fieldset class="contact-info-group">
 
     <label><span>Your Name</span>
