--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -113,7 +113,7 @@
     +position(absolute, -4px null null -60px)
     
     path
-      fill: rgba(0,0,0,0.4)
+      fill: rgba($accent, 0.8)
       
     &:hover
       opacity: 1
