refresh page longer wait

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -4,7 +4,7 @@
   
 <form method="POST" action="//formspree.io/{{ site.data.settings.email }}">
   
-  <input type="hidden" name="_next" value="form-success/index.html" />
+  <input type="hidden" name="_next" value="form-success" />
   
   <fieldset class="contact-info-group">
 
