starting work section

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -58,6 +58,9 @@
       
     @media screen and (max-width: 760px)
       width: 50%
+      
+    @media screen and (max-width: 360px)
+      width: 100%
         
     .thumb-overlay
       +position(absolute)
