--- a/_includes/work/proj-1.html
+++ b/_includes/work/proj-1.html
@@ -1,1 +1,1 @@
-<img src="assets/img/work/proj-1/FruitScreencap.png" alt="The fruitbots game board">
+<img src="assets/img/work/proj-1/fruitvid.gif" alt="An pre-recorded fruitbots game.">
