made fruitbot responsive, updated noscript versions

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -130,3 +130,19 @@
     
     h4
       margin-left: 60px
+      
+.fruitbots
+  margin-bottom: 20px
+  img
+    display: none
+  iframe
+    width: 500px
+    height: 620px
+    border: 0px
+    margin: 0 auto
+    display: block
+  @media (max-width: 475px)
+    img
+      display: block
+    iframe
+      display: none
