--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -141,8 +141,9 @@
     border: 0px
     margin: 0 auto
     display: block
-  @media (max-width: 475px)
+  @media (max-width: 490px)
     img
       display: block
+      max-width: 100%
     iframe
       display: none
