Acoustic Zoo and work testimonials

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -147,3 +147,44 @@
       max-width: 100%
     iframe
       display: none
+      
+.work-testimonial
+  overflow-x: hidden
+  max-width: 600px
+  margin: 20px auto
+  position: relative
+  display: block
+  
+  .client-face
+    min-width: 300px
+    text-align: center    
+    margin-bottom: 30px
+   
+    img
+      max-width: 100px
+      border-radius: 50%  
+        
+        
+    .client-name
+      display: block
+      text-transform: uppercase
+      font-weight: 400
+      letter-spacing: 1px
+      
+    .client-title
+      font-style: normal
+      font-size: 12px
+      color: #999
+   
+  .client-content
+    font-size: 18px
+    line-height: 36px
+    font-weight: 300
+    margin-top: -10px
+    position: relative
+    padding: 0px 30px
+    max-width: 400px
+    margin: 0px auto
+    
+  .client-quote-mark
+    left: 6px
