--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -61,7 +61,23 @@ a
 
 a:hover, a:focus
   color: lighten($accent, 20%)
-
+  
+a.word-button
+  display: block
+  padding: 10px
+  margin: 0px auto 60px auto
+  width: 200px
+  border: 3px
+  border-style: solid
+  border-radius: 25px
+  border-color: $accent
+  color: $accent
+  @extend %small-bold
+  text-align: center
+  
+a.word-button:hover
+  color: $accent-light
+  border-color: $accent-light
 
 
 /* Selection colors (easy to forget)
