--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -69,8 +69,10 @@
   
   
   .skill-unit
-    width: 270px
+    width: 222px
     float: left
+    margin-right: 24px
+    margin-left: 24px
   
   .skill-icons
     font-size: 0
@@ -108,6 +110,8 @@
     
     .skill-unit
       width: 220px 
+      margin-left: 0px
+      margin-right: 0px
   
   
   
