top link added to work section

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -43,6 +43,10 @@
         {% endfor %}
       </noscript>
 
+      <a href="#work" class="word-button" style="margin-top: 40px">
+         Top
+      </a>
+      
     </div>
     </div>
     
