style up button

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -43,9 +43,7 @@
         {% endfor %}
       </noscript>
 
-      <a href="#work" class="word-button" style="margin-top: 40px">
-         Top
-      </a>
+      <a href="#work" class="up-button">{% include icons/icon-up.html %}</a>
       
     </div>
     </div>
