--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -115,7 +115,7 @@
     +position(absolute, -4px null null -60px)
     
     path
-      fill: rgba($accent, 0.8)
+      fill: $accent
       
     &:hover
       opacity: 1
@@ -188,3 +188,26 @@
     
   .client-quote-mark
     left: 6px
+
+  
+a.up-button
+  display: block
+  text-align: center
+  border: 3px
+  border-style: solid
+  border-radius: 5px
+  border-color: rgba($accent, 0.5)
+  path
+    fill: rgba($accent, 0.5)
+  padding: 5px 20px 5px 20px
+  margin: 40px auto 0px auto
+  width: 80px
+  height: 30px
+  
+a.up-button:hover
+  border-color: rgba($accent,1.0)
+  path
+    fill: rgba($accent,1.0)
+  
+  
+  
