--- a/_includes/about.html
+++ b/_includes/about.html
@@ -39,7 +39,7 @@
   
   {% endif %}
 
-  <a href="nik_steel_resume.pdf" class="word-button" style="margin-bottom: 120px">
+  <a href="nik_steel_resume.pdf" class="resume-button">
      Resume
   </a>
   
