--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -112,17 +112,9 @@
       width: 220px 
       margin-left: 0px
       margin-right: 0px
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+a.resume-button
+  @extend a.word-button
+  padding: 10px
+  margin: 0px auto 120px auto
+  width: 140px
