--- a/_includes/work.html
+++ b/_includes/work.html
@@ -44,7 +44,9 @@
       </noscript>
 
       <a href="#work" class="up-button">{% include icons/icon-up.html %}</a>
-      
+    
+    <div class="debug-https" id="debug-https" style="display:none"></div>
+    
     </div>
     </div>
     
