midway updating noscript versions

--- a/_includes/work/proj-4.html
+++ b/_includes/work/proj-4.html
@@ -1,23 +1,1 @@
-<p><img src="assets/img/work/proj-4/kit.jpg" alt="The unassembled kit." /></p>
-
-<p>The <a href="http://ergodox.org/">ErgoDox</a> is an ergonomic keyboard designed by a community of mechanical keyboard
-enthusiasts and sold as a DIY kit by <a href="https://www.massdrop.com/home">Massdrop</a>.  I purchased the DIY
-kit and assembled my ErgoDox keyboard from basic components.</p>
-
-<p><img src="assets/img/work/proj-4/half.jpg" alt="Partially assembled" /></p>
-
-<p>I also made a custom ergonomic desk to position the keys
-directly beneath my fingers when I type.</p>
-
-<div style="width:100%; height:auto">
-   <img alt="Ready for testing" src="assets/img/work/proj-4/testinghalf.jpg" style="float:left; width:50%; height:auto" />
-   <img alt="In the desk" src="assets/img/work/proj-4/desknarrow-half.jpg" style="float:right; width:50%; height:auto" />
-</div>
-
-<p><img src="assets/img/work/proj-4/desktop.jpg" alt="My ergonomic desk top view" /></p>
-
-<p>The typing experience is excellent. I also learned about device drivers
-in the process when I edited the firmware code to customize the key layout.
-The code may be viewed on GitHub <a href="https://github.com/NikSteel/ergodox-firmware">here</a>.</p>
-
-<p><img src="assets/img/work/proj-4/deskwide.jpg" alt="My ergonomic desk" /></p>
+<p>Please enable JavaScript</p>
