--- a/_includes/work/proj-7.html
+++ b/_includes/work/proj-7.html
@@ -1,27 +1,1 @@
-<p><img src="assets/img/work/proj-7/demo1.jpg" alt="Cymatics + LEAP motion rig" /></p>
-
-<p>I created this cymatics rig to demonstrate the physical movement and appearance
-of sound waves. A layer of water rests above the surface of a large loudspeaker. 
-When the water is excited by low frequency sounds, the sound waves become visible as 
-ripples on the surface of the water. Different frequencies cause different wave patterns,
-so I used a LEAP motion sensor and Max/MSP to allow a person to control the frequency of the
-sound using the height of his or her hand, much like playing a theremin.</p>
-
-<p><img src="assets/img/work/proj-7/demo2.jpg" alt="People using the cymatics rig at a University of Windsor Club fair" /></p>
-
-<p>This demonstration has been a great success, especially with children! <a href="https://www.youtube.com/playlist?list=PLK85ZLdkWlf9xbErDN42zK4v6b1Sabhl_">Here</a>
-are some videos of the rig in action and its evolution over time:</p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLK85ZLdkWlf9xbErDN42zK4v6b1Sabhl_" frameborder="0" allowfullscreen=""></iframe>
-
-<p><br /></p>
-
-<p>For an Acoustic Zoo workshop, we also experimented with using sand and surfaces treated with a hydrophobic coating:</p>
-
-<p><img src="assets/img/work/proj-7/sand.jpg" alt="Chladni patterns in sand" />
-<img src="assets/img/work/proj-7/hydrophobic.jpg" alt="A hydrophobic coating over a metal pannel on a speaker." /></p>
-
-<p>Here is the latest version of the rig, featuring a much lighter and more portable vibration table 
-(shown on the left) that I made using a Clark Synthesis tactile transducer:</p>
-
-<p><img src="assets/img/work/proj-7/newrig.jpg" alt="The latest version of the demo" /></p>
+<p>Please enable JavaScript</p>
