centering clients better

--- a/assets/css/3-sections/_clients.sass
+++ b/assets/css/3-sections/_clients.sass
@@ -17,7 +17,7 @@
       @extend %#{$animation}
     
     .client-face
-      min-width: 300px
+      min-width: 180px
       text-align: center
       
       img
@@ -119,7 +119,7 @@
     
     
 
-@media (max-width: 750px)
+@media (max-width: 850px)
   .clients-logos
     +flex-wrap(wrap)
   
@@ -129,7 +129,7 @@
     .client-unit.active-client
       display: block
       position: relative
-      margin-left: 0px
+      margin-left: auto
       left: auto
     
       .client-face
@@ -151,8 +151,6 @@
 
   .clients-mobile-nav
     display: block
-    
-    
     
     
     
