next/prev enhance

--- a/assets/css/3-sections/_clients.sass
+++ b/assets/css/3-sections/_clients.sass
@@ -103,7 +103,7 @@
 .clients-mobile-nav
   text-align: center
   position: relative
-  z-index: 2
+  z-index: 3
   display: none
   
   span
@@ -143,9 +143,6 @@
       
       .client-quote-mark
         left: 6px
-
-  .client-controls
-    display: none
   
   .clients-logos
     display: none
@@ -154,7 +151,7 @@
     display: block
     
     
-    
-    
-    
+@media (max-width: 600px)
+  .client-controls
+    display: none
     
