make yaml work-testimonial include to tidy up code and clean up svgs

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -22,7 +22,7 @@
 
         <div class="client-content">
           <div class="client-quote-mark">{% include icons/icon-quote-mark.html %}</div>
-          {{ client.quote }}
+          <p>{{ client.quote }}</p>
         </div>
       </div>
     {% endfor %}
