--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -36,7 +36,7 @@
 
   <div class="clients-logos">
     {% for client in site.data.settings.clients %}
-        <img class="client-logo {% if forloop.first %}active-client{% endif %}" src="assets/img/clients/{{ client.logo }}" align="{{ client.logo }}">
+        <img class="client-logo {% if forloop.first %}active-client{% endif %}" src="assets/img/clients/{{ client.logo }}" alt="{{ client.logo }}">
     {% endfor %}
   </div>
 
