more seo optimizations

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -76,7 +76,7 @@
   position: relative
   display: none
   
-  h4, noscript h4
+  h2
     color: $accent
     font-weight: 300
     text-transform: uppercase
@@ -107,7 +107,7 @@
     .work-return
       left: 0px
     
-    h4
+    h2
       margin-left: 60px
       
 .fruitbots
@@ -188,5 +188,18 @@ a.up-button:hover
   path
     fill: rgba($accent,1.0)
   
+
+.side-by-side
+  width: 100%
+  height: auto
   
+  .sbs-left
+    float: left
+    width: 50% 
+    height: auto
+    
+  .sbs-right
+    float: right
+    width: 50% 
+    height: auto
   
