--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -50,3 +50,10 @@
   width: 90%
   max-width: 720px
   margin: 0 auto
+  
+a.blog-button
+  @extend a.word-button
+  padding: 10px
+  margin: 0px auto 50px
+  border-radius: 5px
+  width: 80px
